# verxio-ai

./: .env.verxio.example  .gitignore  .gitmodules  .prettierignore  DEPLOY.md  IMPLEMENTATION_PLAN.md  README.md  docker-compose.verxio.yml  index.html  package-lock.json  package.json  vite.config.ts
.githooks/: pre-commit
.github/workflows/: ci.yml
scripts/: install-git-hooks.mjs
src/: hermes.ts  styles.css  vite-env.d.ts
src/app/: desktop-controller.tsx
src/components/: desktop-install-overlay.tsx  desktop-onboarding-overlay.tsx  model-picker.tsx
src/i18n/: en.ts  ja.ts  types.ts  zh-hant.ts  zh.ts
src/lib/: provider-setup-errors.test.ts  provider-setup-errors.ts  verxio-api.ts  web-local-fs.ts
src/platform/: install-web-bridge.ts
src/store/: onboarding.ts
src/themes/: context.tsx
src/types/: hermes.ts
verxio-api/: Dockerfile  pyproject.toml
verxio-api/app/: composio_catalog.py  db.py  inference.py  leash_agent.py  main.py  models.py  notepad.py  pulse.py  pulse_engine.py  pulse_webhooks.py  runtime_dashboard.py  runtime_manager.py
verxio-api/app/pulse_channels/: __init__.py  outbound.py
verxio-api/migrations/: 003_notepad.sql  004_pulse.sql  005_inference.sql  006_hosted_qwen_only.sql
verxio-api/tests/: test_api.py  test_leash_agent.py  test_runtime_dashboard.py
verxio-desktop/: README.md  package-lock.json  package.json
verxio-desktop/electron/: main.cjs  preload.cjs
verxio-desktop/scripts/: assert-web-dist.cjs  run-electron.cjs  (+1 more)
verxio-web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
(+148 files in other folders)
